# -C-Windows-Simple-Multi-Client-Server

./: CMakeLists.txt  client.c  server.c
